--- a/index.html
+++ b/index.html
@@ -456,8 +456,8 @@
   pdfjsLib = window['pdfjs-dist/build/pdf'];
   pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.worker.min.js';
 
-  // API Configuration
-  const API_URL = "https://script.google.com/macros/s/AKfycbyvNZG82zqaAqcH-jPbNq9IG2mlfHiSOVYQMrpB5kgqI55hIRXmip8kp8u7Zq_wwnQL/exec";
+  // API Configuration - Updated to use your provided Google Apps Script URL
+  const API_URL = "https://script.google.com/macros/s/AKfycbynjHEQI6fbcnX59CGPxQnPb42sMrKm1Ep35MIbI5IuqZ-lyzRMBxm1c910pcribovc/exec";
 
   // Global variables
   let poCounter = 0;
